--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,8 @@
 # The HTTP port that the service listens to
 server.port=8444
+# There would probably be an encrypted password used here
+spring.data.mongodb.host=mongo
+spring.data.mongodb.username=coolUser
+spring.data.mongodb.password=coolPassword
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=my_retail
